--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,123 @@
 vivado/vivado.jou
 vivado/vivado.log
+vivado/vivado_77.backup.jou
+vivado/prova.xpr
+vivado/vivado_77.backup.log
+vivado/.Xil/croc_xilinx_propImpl.xdc
+vivado/.Xil/Vivado-77-nixos-t14/elab.rtd
+vivado/.Xil/Vivado-77-nixos-t14/realtime/clk_wiz_0_stub.v
+vivado/.Xil/Vivado-77-nixos-t14/realtime/croc_xilinx.tcl
+vivado/.Xil/Vivado-77-nixos-t14/realtime/dupFiles.rpt
+vivado/ips/clk_wiz_0/clk_wiz_0_bmstub.v
+vivado/ips/clk_wiz_0/clk_wiz_0_board.xdc
+vivado/ips/clk_wiz_0/clk_wiz_0_clk_wiz.v
+vivado/ips/clk_wiz_0/clk_wiz_0_sim_netlist.v
+vivado/ips/clk_wiz_0/clk_wiz_0.xdc
+vivado/ips/clk_wiz_0/clk_wiz_0.xml
+vivado/ips/clk_wiz_0/clk_wiz_0_stub.vhdl
+vivado/ips/clk_wiz_0/clk_wiz_0.xci
+vivado/ips/clk_wiz_0/mmcm_pll_drp_func_us_pll.vh
+vivado/ips/clk_wiz_0/clk_wiz_0.v
+vivado/ips/clk_wiz_0/clk_wiz_0.bmj
+vivado/ips/clk_wiz_0/clk_wiz_0_ooc.xdc
+vivado/ips/clk_wiz_0/doc/clk_wiz_v6_0_changelog.txt
+vivado/ips/clk_wiz_0/mmcm_pll_drp_func_us_plus_pll.vh
+vivado/ips/clk_wiz_0/mmcm_pll_drp_func_7s_pll.vh
+vivado/ips/clk_wiz_0/clk_wiz_0_sim_netlist.vhdl
+vivado/prova.runs/synth_1/vivado.jou
+vivado/prova.runs/synth_1/.Xil/croc_xilinx_propImpl.xdc
+vivado/prova.runs/synth_1/vivado.pb
+vivado/prova.cache/ip/2024.2.2/a/e/ae782fff95462f4a/clk_wiz_0_sim_netlist.vhdl
+vivado/prova.cache/ip/2024.2.2/a/e/ae782fff95462f4a/ae782fff95462f4a.xci
+vivado/prova.cache/ip/2024.2.2/a/e/ae782fff95462f4a/clk_wiz_0_stub.v
+vivado/prova.cache/ip/2024.2.2/a/e/ae782fff95462f4a/clk_wiz_0.dcp
+vivado/prova.cache/ip/2024.2.2/a/e/ae782fff95462f4a/clk_wiz_0_stub.vhdl
+vivado/ips/clk_wiz_0/mmcm_pll_drp_func_us_mmcm.vh
+vivado/prova.cache/wt/synthesis.wdf
+vivado/prova.hw/prova.lpr
+vivado/prova.cache/wt/webtalk_pa.xml
+vivado/prova.ip_user_files/ip/clk_wiz_0/clk_wiz_0_stub.v
+vivado/ips/clk_wiz_0/clk_wiz_0_stub.v
+vivado/ips/clk_wiz_0/mmcm_pll_drp_func_us_plus_mmcm.vh
+vivado/prova.ip_user_files/README.txt
+vivado/prova.ip_user_files/ip/clk_wiz_0/clk_wiz_0.veo
+vivado/prova.cache/wt/synthesis_details.wdf
+vivado/prova.runs/.jobs/vrs_config_3.xml
+vivado/prova.runs/clk_wiz_0_synth_1/__synthesis_is_complete__
+vivado/prova.runs/.jobs/vrs_config_2.xml
+vivado/prova.runs/.jobs/vrs_config_1.xml
+vivado/prova.cache/ip/2024.2.2/a/e/ae782fff95462f4a/clk_wiz_0_sim_netlist.v
+vivado/prova.runs/clk_wiz_0_synth_1/.vivado.begin.rst
+vivado/prova.runs/clk_wiz_0_synth_1/.vivado.end.rst
+vivado/prova.runs/clk_wiz_0_synth_1/clk_wiz_0_utilization_synth.pb
+vivado/prova.runs/clk_wiz_0_synth_1/clk_wiz_0_utilization_synth.rpt
+vivado/prova.ip_user_files/ip/clk_wiz_0/clk_wiz_0_stub.vhdl
+vivado/prova.runs/clk_wiz_0_synth_1/clk_wiz_0.vds
+vivado/ips/clk_wiz_0/clk_wiz_0.veo
+vivado/prova.runs/clk_wiz_0_synth_1/gen_run.xml
+vivado/prova.runs/clk_wiz_0_synth_1/rundef.js
+vivado/prova.runs/clk_wiz_0_synth_1/ISEWrap.js
+vivado/prova.runs/clk_wiz_0_synth_1/dont_touch.xdc
+vivado/prova.runs/clk_wiz_0_synth_1/ISEWrap.sh
+vivado/prova.runs/clk_wiz_0_synth_1/htr.txt
+vivado/prova.runs/clk_wiz_0_synth_1/clk_wiz_0.dcp
+vivado/prova.runs/clk_wiz_0_synth_1/project.wdf
+vivado/prova.runs/clk_wiz_0_synth_1/clk_wiz_0.tcl
+vivado/prova.runs/clk_wiz_0_synth_1/runme.log
+vivado/prova.runs/clk_wiz_0_synth_1/.Vivado_Synthesis.queue.rst
+vivado/prova.runs/clk_wiz_0_synth_1/runme.sh
+vivado/prova.runs/clk_wiz_0_synth_1/vivado.jou
+vivado/prova.runs/clk_wiz_0_synth_1/.Xil/clk_wiz_0_propImpl.xdc
+vivado/prova.runs/impl_1/.opt_design.begin.rst
+vivado/prova.runs/impl_1/.init_design.begin.rst
+vivado/ips/clk_wiz_0/clk_wiz_0.dcp
+vivado/prova.runs/impl_1/.init_design.end.rst
+vivado/prova.runs/impl_1/.place_design.error.rst
+vivado/ips/clk_wiz_0/mmcm_pll_drp_func_7s_mmcm.vh
+vivado/prova.runs/impl_1/.vivado.begin.rst
+vivado/prova.runs/impl_1/croc_xilinx_drc_opted.rpt
+vivado/prova.runs/impl_1/.Vivado_Implementation.queue.rst
+vivado/prova.runs/impl_1/gen_run.xml
+vivado/prova.runs/impl_1/.vivado.error.rst
+vivado/prova.runs/impl_1/croc_xilinx_drc_opted.rpx
+vivado/prova.runs/impl_1/.opt_design.end.rst
+vivado/prova.runs/impl_1/croc_xilinx.tcl
+vivado/prova.runs/impl_1/init_design.pb
+vivado/prova.runs/impl_1/croc_xilinx_opt.dcp
+vivado/prova.runs/impl_1/htr.txt
+vivado/prova.cache/wt/project.wpc
+vivado/prova.runs/impl_1/ISEWrap.js
+vivado/prova.runs/impl_1/croc_xilinx.vdi
+vivado/prova.runs/impl_1/ISEWrap.sh
+vivado/prova.runs/impl_1/project.wdf
+vivado/prova.runs/impl_1/rundef.js
+vivado/prova.runs/impl_1/runme.bat
+vivado/prova.runs/impl_1/place_design.pb
+vivado/prova.runs/impl_1/runme.log
+vivado/prova.runs/impl_1/opt_design.pb
+vivado/prova.runs/impl_1/runme.sh
+vivado/prova.runs/synth_1/.Vivado_Synthesis.queue.rst
+vivado/prova.runs/impl_1/vivado.jou
+vivado/prova.runs/impl_1/runme.sh
+vivado/prova.runs/synth_1/project.wdf
+vivado/prova.runs/synth_1/croc_xilinx_utilization_synth.rpt
+vivado/prova.runs/synth_1/croc_xilinx.dcp
+vivado/prova.runs/synth_1/.vivado.begin.rst
+vivado/prova.runs/synth_1/gen_run.xml
+vivado/prova.runs/synth_1/__synthesis_is_complete__
+vivado/prova.runs/impl_1/croc_xilinx_drc_opted.pb
+vivado/prova.runs/synth_1/croc_xilinx.vds
+vivado/prova.runs/synth_1/.vivado.end.rst
+vivado/prova.runs/synth_1/rundef.js
+vivado/prova.runs/synth_1/htr.txt
+vivado/prova.runs/impl_1/.place_design.begin.rst
+vivado/prova.runs/synth_1/croc_xilinx_utilization_synth.pb
+vivado/prova.runs/impl_1/vivado.pb
+vivado/prova.runs/synth_1/runme.bat
+vivado/prova.runs/synth_1/croc_xilinx.tcl
+vivado/prova.runs/synth_1/ISEWrap.js
+vivado/prova.runs/clk_wiz_0_synth_1/vivado.pb
+vivado/prova.runs/synth_1/runme.sh
+vivado/prova.runs/synth_1/runme.log
+vivado/prova.runs/synth_1/ISEWrap.sh
+vivado/prova.runs/clk_wiz_0_synth_1/runme.bat
