--- a/.gitignore
+++ b/.gitignore
@@ -121,3 +121,46 @@ vivado/prova.runs/synth_1/runme.sh
 vivado/prova.runs/synth_1/runme.log
 vivado/prova.runs/synth_1/ISEWrap.sh
 vivado/prova.runs/clk_wiz_0_synth_1/runme.bat
+vivado/constraints/zybo-z7.xdc
+vivado/prova.runs/impl_1/croc_xilinx_route_status.pb
+vivado/prova.runs/impl_1/croc_xilinx_route_status.rpt
+vivado/prova.runs/impl_1/croc_xilinx_routed.dcp
+vivado/prova.runs/impl_1/croc_xilinx_power_summary_routed.pb
+vivado/prova.runs/impl_1/croc_xilinx_utilization_placed.pb
+vivado/prova.runs/impl_1/croc_xilinx_power_routed.rpt
+vivado/prova.runs/impl_1/croc_xilinx_methodology_drc_routed.rpx
+vivado/prova.runs/impl_1/croc_xilinx.bit
+vivado/prova.runs/impl_1/croc_xilinx_timing_summary_routed.pb
+vivado/prova.runs/impl_1/croc_xilinx_utilization_placed.rpt
+vivado/prova.runs/impl_1/croc_xilinx_physopt.dcp
+vivado/prova.runs/impl_1/croc_xilinx_timing_summary_routed.rpx
+vivado/prova.runs/impl_1/croc_xilinx.mmi
+vivado/prova.runs/impl_1/croc_xilinx_methodology_drc_routed.pb
+vivado/prova.runs/impl_1/croc_xilinx_drc_routed.rpx
+vivado/prova.runs/impl_1/croc_xilinx_bus_skew_routed.rpx
+vivado/prova.runs/impl_1/croc_xilinx_io_placed.rpt
+vivado/prova.runs/impl_1/croc_xilinx_control_sets_placed.rpt
+vivado/prova.runs/impl_1/croc_xilinx_drc_routed.pb
+vivado/prova.runs/impl_1/croc_xilinx_clock_utilization_routed.rpt
+vivado/prova.runs/impl_1/croc_xilinx_drc_routed.rpt
+vivado/prova.runs/impl_1/clockInfo.txt
+vivado/prova.runs/impl_1/.write_bitstream.begin.rst
+vivado/prova.runs/impl_1/croc_xilinx_538.backup.vdi
+vivado/prova.runs/impl_1/.vivado.end.rst
+vivado/prova.runs/impl_1/.route_design.end.rst
+vivado/prova.runs/impl_1/croc_xilinx_timing_summary_routed.rpt
+vivado/prova.runs/impl_1/phys_opt_design.pb
+vivado/prova.runs/impl_1/croc_xilinx_power_routed.rpx
+vivado/prova.runs/impl_1/route_design.pb
+vivado/prova.runs/impl_1/croc_xilinx_methodology_drc_routed.rpt
+vivado/prova.runs/impl_1/.route_design.begin.rst
+vivado/prova.runs/impl_1/.write_bitstream.end.rst
+vivado/prova.runs/impl_1/.phys_opt_design.end.rst
+vivado/prova.runs/impl_1/croc_xilinx_bus_skew_routed.pb
+vivado/prova.runs/impl_1/croc_xilinx_placed.dcp
+vivado/prova.runs/impl_1/.place_design.end.rst
+vivado/prova.runs/impl_1/.phys_opt_design.begin.rst
+vivado/prova.runs/impl_1/vivado_538.backup.jou
+vivado/prova.runs/impl_1/croc_xilinx_bus_skew_routed.rpt
+vivado/prova.runs/.jobs/vrs_config_4.xml
+vivado/prova.runs/impl_1/write_bitstream.pb
